After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 796679 - rtsp-stream: Mismatch between allowed and configured protocols
rtsp-stream: Mismatch between allowed and configured protocols
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-rtsp-server
git master
Other Linux
: Normal normal
: 1.15.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-06-26 12:58 UTC by Ognyan Tonchev (redstar_)
Modified: 2018-06-26 13:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Remove the current flag and add two new flags, one indicating configured and the other one allowed transports (3.76 KB, patch)
2018-06-26 12:58 UTC, Ognyan Tonchev (redstar_)
committed Details | Review

Description Ognyan Tonchev (redstar_) 2018-06-26 12:58:10 UTC
Created attachment 372826 [details] [review]
Remove the current flag and add two new flags, one indicating configured and the other one allowed transports

The 'protocols' flag in the streams' private structure is used for two different purposes, i.e. indicating configured and allowed transports which are two different things.
Comment 1 Sebastian Dröge (slomo) 2018-06-26 13:28:01 UTC
Review of attachment 372826 [details] [review]:

Generally looks good, thanks!

::: gst/rtsp-server/rtsp-stream.c
@@ +4800,3 @@
     goto create_sender_error;
 
+  priv->configured_protocols |= transport->lower_transport;

Protocols can also be removed later if a client using the stream disappeared, or not?
Comment 2 Sebastian Dröge (slomo) 2018-06-26 13:39:43 UTC
Actually sinks are never ever removed again, so this should be fine.
Comment 3 Sebastian Dröge (slomo) 2018-06-26 13:41:40 UTC
commit f110016ac6bb90a2cbadfd8275a0a997babf57e2 (HEAD -> master)
Author: Ognyan Tonchev <ognyan@axis.com>
Date:   Wed Mar 21 10:56:51 2018 +0100

    rtsp-stream: Fix mismatch between allowed and configured protocols
    
    https://bugzilla.gnome.org/show_bug.cgi?id=796679