rtsp-stream: Fix mismatch between allowed and configured protocols

https://bugzilla.gnome.org/show_bug.cgi?id=796679